LIMA-20: Fix match listing tools icons vertical alignement + add comments number in My Games table in comments icon

--- a/css/less/bootstrap/rules/tables.less
+++ b/css/less/bootstrap/rules/tables.less
@@ -464,10 +464,9 @@
            .ls-tools-icon-style();
           }
 		  
-		  &.tools-1 {
-			  max-width: 20px;
-		  }
-        
+    		  &.tools-1 {
+    			  max-width: 20px;
+    		  }
         } 
         
       }
@@ -1029,7 +1028,7 @@ tbody{
               display: inline-block;
               font-size:  @font-size-large;
               color: rgba(red(@ls-dark-color),green(@ls-dark-color),blue(@ls-dark-color), 0.05);
-              padding: 5px 1px;
+              padding: 0 1px;
               
               
               &.active{
@@ -1098,8 +1097,8 @@ tbody{
               color: lighten(@ls-dark-color, 36%);
               
               &:hover {
-	            color: @link-hover-color;
-            }
+	             color: @link-hover-color;
+              }
             }
             
             .red-card{
@@ -1113,8 +1112,6 @@ tbody{
             img{
               max-width: 20px;
             }
-            
-            
             
             &.team1{
               text-align: right;
@@ -1130,8 +1127,7 @@ tbody{
               img{
                 margin-left: 5px;
               }
-            }
-            
+            }      
             
             &.team2{
               text-align: left;
